# open-a2a-canvas

./: .gitignore  README.md  package.json  pnpm-lock.yaml
agent-client/: utils.ts
agents/: .env.template  buildings_management.py  clothing.py  documents.py  finance.py  it.py  main.py  packing.py  personal_belongings.py  pyproject.toml  research.py  run_all_agents.sh  search.py  start_agents.py  stop_all_agents.sh
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/ag-ui-client/: index.ts  utils.ts
frontend/src/agent-client/: index.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
